LoxSharp/LoxSharp/grammar.txt
program		   -> declaration* EOF ;

declaration	   -> classDecl | funcDecl | varDecl | statement ;

classDecl	   -> "class" IDENTIFIER "{" function* "}" ;

funDecl		   -> "fun" function ;

function	   -> IDENTIFIER "(" parameters? ")" block ;

parameters	   -> IDENTIFIER ( "," IDENTIFIER )* ;

varDecl		   -> "var" IDENTIFIER ( "=" expression )? ";" ;

statement	   -> exprStmt | forStmt | ifStmt | printStmt | returnStmt | whileStmt | block ;

returnStmt	   -> "return" expression? ";" ;

forStmt		   -> "for" "(" ( varDecl | exprStmt | ";" ) expression? ";" expression? ")" statement ;

whileStmt	   -> "while" "(" expression ")" statement ;

ifStmt		   -> "if" "(" expression ")" statement ( "else" statement )? ;

block		   -> "{" declaration* "}" '

printStmt	   -> "print" expression ";" ;

exprStmt	   -> expression ";" ;

expression	   -> assignment ;

assignment	   -> ( call "." )? IDENTIFIER "=" assignment | logic_or ;

logic_or	   -> logic_and ( "or" logic_and )* ;

logic_and	   -> equality ( "and" equality )* ;

equality	   -> comparison ( ( "!=" | "==" ) comparison )* ;

comparison	   -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term		   -> factor ( ( "-" | "+" ) factor )* ;

factor		   -> unary ( ( "/" | "*" ) unary )* ;

unary		   -> ( "!" | "-" ) unary | primary ;

call		   -> primary ( "(" arguments? ")" | "." IDENTIFIER )* ;

arguments	   -> expression ( "," expression )* ;

primary		   -> IDENTIFIER | NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" ;
